// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render StatusBar correctly 1`] = `
<div
  className="status-bar status-bar__content"
  key="fe34bd9e-d134-4ba0-9141-87e9788d30b8"
>
  <CSSTransitionGroup
    transitionAppear={true}
    transitionAppearTimeout={1000}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={1000}
    transitionName="anim"
  />
</div>
`;

exports[`should render StatusBar with default message correctly 1`] = `
<div
  className="status-bar status-bar__content"
  key="a65809db-8125-438e-900f-89333e69a4f9"
>
  <CSSTransitionGroup
    transitionAppear={true}
    transitionAppearTimeout={1000}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={1000}
    transitionName="anim"
  >
    <StatusBarText
      message="default message"
    />
  </CSSTransitionGroup>
</div>
`;

exports[`should render StatusBar with route fail status correctly 1`] = `
<div
  className="status-bar status-bar__content"
  key="c6c8f94f-5b78-4435-b7e6-4526b3e09e95"
>
  <CSSTransitionGroup
    transitionAppear={true}
    transitionAppearTimeout={1000}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={1000}
    transitionName="anim"
  >
    <StatusBarText
      message="route fail"
    />
  </CSSTransitionGroup>
</div>
`;

exports[`should render StatusBar with route in progress status correctly 1`] = `
<div
  className="status-bar status-bar__content"
  key="ffe35c91-b81c-4034-ab37-4dd1861ffb28"
>
  <CSSTransitionGroup
    transitionAppear={true}
    transitionAppearTimeout={1000}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={1000}
    transitionName="anim"
  >
    <StatusBarText
      message="in progress"
    />
  </CSSTransitionGroup>
</div>
`;

exports[`should render StatusBar with server error correctly 1`] = `
<div
  className="status-bar status-bar__content"
  key="8c1ab9ae-1738-40af-b8b0-fe781c2f7849"
>
  <CSSTransitionGroup
    transitionAppear={true}
    transitionAppearTimeout={1000}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={1000}
    transitionName="anim"
  >
    <StatusBarText
      message="Connection Error, please try again later"
    />
  </CSSTransitionGroup>
</div>
`;

exports[`should render StatusBar with total distance correctly 1`] = `
<div
  className="status-bar status-bar__content"
  key="00022d42-367c-4cd9-a943-237cad6ec02a"
>
  <CSSTransitionGroup
    transitionAppear={true}
    transitionAppearTimeout={1000}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={1000}
    transitionName="anim"
  />
</div>
`;

exports[`should render StatusBar with total time correctly 1`] = `
<div
  className="status-bar status-bar__content"
  key="5fbbe8d7-eb71-4860-b45b-868ab267aba3"
>
  <CSSTransitionGroup
    transitionAppear={true}
    transitionAppearTimeout={1000}
    transitionEnter={true}
    transitionEnterTimeout={500}
    transitionLeave={true}
    transitionLeaveTimeout={1000}
    transitionName="anim"
  />
</div>
`;
